@@ -21,7 +21,7 @@ Gem::Specification.new do |s|
   s.rdoc_options  = ["--charset=UTF-8"]
 
   s.add_dependency("tilt", "~> 1.3.0")
-  s.add_dependency("sinatra", "~> 1.2.5")
+  s.add_dependency("sinatra", "~> 1.2.6")
   s.add_dependency("http_router", "~> 0.7.5")
   s.add_dependency("thor", ">=0.14.3")
   s.add_dependency("activesupport", ">= 3.0.0")
