@@ -20,8 +20,10 @@ class TestApplication < Test::Unit::TestCase
       assert_equal Padrino.root("views"), PadrinoTestApp.views
       assert PadrinoTestApp.raise_errors
       assert !PadrinoTestApp.logging
-      assert PadrinoTestApp.padrino_logging
       assert !PadrinoTestApp.sessions
+      assert !PadrinoTestApp.dump_errors
+      assert !PadrinoTestApp.show_exceptions
+      assert PadrinoTestApp.raise_errors
     end
 
     should 'check padrino specific options' do
