@@ -55,7 +55,10 @@ class TestPadrinoLogger < Test::Unit::TestCase
     end
 
     should 'log an application' do
-      mock_app { get("/"){ "Foo" } }
+      mock_app do
+        enable :logging
+        get("/"){ "Foo" }
+      end
       get "/"
       assert_equal "Foo", body
       assert_match /GET/, Padrino.logger.log.string
@@ -63,7 +66,10 @@ class TestPadrinoLogger < Test::Unit::TestCase
 
     context "static asset logging" do
       should 'not log static assets by default' do
-        mock_app { get("/images/something.png"){ env["sinatra.static_file"] = '/public/images/something.png'; "Foo" } }
+        mock_app do
+          enable :logging
+          get("/images/something.png"){ env["sinatra.static_file"] = '/public/images/something.png'; "Foo" }
+        end
         get "/images/something.png"
         assert_equal "Foo", body
         assert_match "", Padrino.logger.log.string
@@ -71,7 +77,10 @@ class TestPadrinoLogger < Test::Unit::TestCase
 
       should 'allow turning on static assets logging' do
         Padrino.logger.instance_eval{ @log_static = true }
-        mock_app { get("/images/something.png"){ env["sinatra.static_file"] = '/public/images/something.png'; "Foo" } }
+        mock_app do
+          enable :logging
+          get("/images/something.png"){ env["sinatra.static_file"] = '/public/images/something.png'; "Foo" }
+        end
         get "/images/something.png"
         assert_equal "Foo", body
         assert_match /GET/, Padrino.logger.log.string
